// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component should a Button with an Icon on the left side 1`] = `
<div>
  <button
    class="db-button db-button--primary db-button--default db-button--icon-position-before db-button--size-l"
    type="button"
  >
    <svg
      class="db-icon"
    />
    My button 10
  </button>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Button Component should a Button with an Icon on the right side 1`] = `
<div>
  <button
    class="db-button db-button--primary db-button--default db-button--icon-position-before db-button--size-l"
    type="button"
  >
    <svg
      class="db-icon"
    />
    My button 11
  </button>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Button Component should not add an icon position class name in icon-only Buttons 1`] = `
<div>
  <button
    class="db-button db-button--primary db-button--round db-button--size-l"
    title="My button 13"
    type="button"
  >
    <svg
      class="db-icon"
    />
    <span
      aria-hidden="false"
    >
      My button 13
    </span>
  </button>
  <span
    class="db-inline-spacer"
  >
     
  </span>
  <button
    class="db-button db-button--primary db-button--square db-button--size-l"
    title="My button 14"
    type="button"
  >
    <svg
      class="db-icon"
    />
    <span
      aria-hidden="false"
    >
      My button 14
    </span>
  </button>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Button Component should not add an icon position class name when no icon is used 1`] = `
<div>
  <button
    class="db-button db-button--primary db-button--default db-button--size-l"
    type="button"
  >
    My button 12
  </button>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Button Component should render a button 1`] = `
<div>
  <button
    class="db-button db-button--primary db-button--default db-button--size-l"
    type="button"
  >
    My button 1
  </button>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Button Component should render a button when \`href\` is not set 1`] = `
<div>
  <button
    class="db-button db-button--primary db-button--default db-button--size-l"
    type="button"
  >
    My button 7
  </button>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Button Component should render a button with addional attributes 1`] = `
<div>
  <button
    class="db-button db-button--primary db-button--default db-button--size-l"
    title="Click me"
    type="button"
  >
    My button 5
  </button>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Button Component should render a button with addional classes 1`] = `
<div>
  <button
    class="db-button db-button--primary db-button--default db-button--size-l my-class"
    type="button"
  >
    My button 6
  </button>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Button Component should render a button with custom \`aria-label\` 1`] = `
<div>
  <button
    aria-label="This is a custom aria-label"
    class="db-button db-button--primary db-button--default db-button--size-l"
    type="button"
  >
    My button 9
  </button>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Button Component should render a full-width button 1`] = `
<div>
  <button
    class="db-button db-button--primary db-button--default db-button--block db-button--size-l"
    type="button"
  >
    My button 4
  </button>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Button Component should render a secondary button 1`] = `
<div>
  <button
    class="db-button db-button--secondary db-button--default db-button--size-l"
    type="button"
  >
    My button 3
  </button>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Button Component should render a submit button 1`] = `
<div>
  <button
    class="db-button db-button--primary db-button--default db-button--size-l"
    type="submit"
  >
    My button 2
  </button>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Button Component should render an anchor when \`href\` is set 1`] = `
<div>
  <a
    class="db-button db-button--primary db-button--default db-button--size-l"
    href="#"
  >
    My button 8
  </a>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;
